<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
  <ScrollView android:id="@+id/scrollView1" android:layout_width="match_parent" android:layout_height="match_parent" android:clipToPadding="false" android:paddingTop="16dp" android:paddingBottom="16dp">
    <LinearLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:orientation="vertical">
      <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <TextView android:id="@+id/titleTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:clickable="false" android:longClickable="false" android:textAppearance="?attr/textAppearanceHeadlineSmall">
                </TextView>
        <LinearLayout android:id="@+id/akaLayout" android:layout_width="match_parent" android:layout_height="wrap_content">
          <TextView android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:clickable="false" android:longClickable="false" android:text="@string/aka" android:textAppearance="?attr/textAppearanceBodyMedium">
                    </TextView>
          <TextView android:id="@+id/akaTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="4dp" android:clickable="false" android:longClickable="false" android:singleLine="false" android:textAppearance="?attr/textAppearanceBodyMedium">
                    </TextView>
...
      <depollsoft.tagmaster.SummaryColumnsLayout android:id="@+id/summaryColumns" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp">
        <depollsoft.tagmaster.DetailSectionsLayout android:layout_width="match_parent" android:layout_height="wrap_content">
          <depollsoft.tagmaster.DetailMetadataLayout android:id="@+id/summaryFacts" android:layout_width="match_parent" android:layout_height="wrap_content">
            <depollsoft.tagmaster.DetailPairLayout android:id="@+id/tagIdRow" android:layout_width="match_parent" android:layout_height="wrap_content">
              <TextView android:id="@+id/tagIdLabel" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="start|center_vertical" android:layout_marginEnd="5dp" android:text="@string/TagId" android:textAppearance="?attr/textAppearanceLabelLarge">
                </TextView>
              <TextView android:id="@+id/tagIdTextView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:textAppearance="?attr/textAppearanceBodyMedium">
                </TextView>
            </depollsoft.tagmaster.DetailPairLayout>
            <depollsoft.tagmaster.DetailPairLayout android:id="@+id/ratingRow" android:layout_width="match_parent" android:layout_height="wrap_content">
              <TextView android:id="@+id/textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="start|center_vertical" android:layout_marginEnd="5dp" android:clickable="false" android:longClickable="false" android:text="@string/Rating" android:textAppearance="?attr/textAppearanceLabelLarge">
                </TextView>
              <depollsoft.tagmaster.DetailRatingLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false">
...
