<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="12dp" android:longClickable="false" android:linksClickable="false" android:clickable="false" android:id="@+id/statusTextView"></TextView>
	<ListView android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_weight="1"
		android:id="@+id/queryResultListView" android:cacheColorHint="#00000000"></ListView>
	<ProgressBar android:layout_gravity="center" android:id="@+id/loadingProgressBar" android:layout_width="20dp" android:layout_height="20dp"></ProgressBar>
</LinearLayout>
